create new password form and controller for password reset

--- a/views/auth/reset.ejs
+++ b/views/auth/reset.ejs
@@ -17,7 +17,7 @@
         </div>
 
         <input type="hidden" name="_csrf" value="<%= csrfToken %>">
-        <button class="btn" type="submit">Reset</button>
+        <button class="btn" type="submit">Reset Password</button>
     </form>
 </main>
 <%- include('../includes/end.ejs') %>
