--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -13,14 +13,16 @@
     <form class="login-form" action="/login" method="POST">
         <div class="form-control">
             <label for="email">E-mail</label>
-            <input type="email" name="email" id="email">
+            <input type="email" name="email" id="email" value="<%= oldInput.email %>"
+                   class="<%= validationErrors.find(e => e.param === 'email') ? 'invalid' : '' %>">
         </div>
-        <div class="form-control">
+        <div class=" form-control">
             <label for="password">Password</label>
-            <input type="password" name="password" id="password">
+            <input type="password" name="password" id="password" value="<%= oldInput.password %>"
+                   class="<%= validationErrors.find(e => e.param === 'password') ? 'invalid' : '' %>">
         </div>
 
-        <input type="hidden" name="_csrf" value="<%= csrfToken; %>">
+        <input type=" hidden" name="_csrf" value="<%= csrfToken; %>">
         <button class="btn" type="submit">Login</button>
     </form>
     <div class="centered">
