--- a/views/admin/edit-product.ejs
+++ b/views/admin/edit-product.ejs
@@ -11,7 +11,8 @@
         <div class="user-message user-message--error"><%= errorMessage; %></div>
     <% } %>
     <form class="product-form"
-          action="/admin/<% if (editing || hasError) { %>edit-product<% } else { %>add-product<% } %>" method="POST">
+          action="/admin/<% if (editing || hasError) { %>edit-product<% } else { %>add-product<% } %>" method="POST"
+          enctype="multipart/form-data">
         <div class="form-control">
             <label for="title">Title</label>
             <input type="text" name="title" id="title"
@@ -19,9 +20,8 @@
                    class="<%= validationErrors.find(e => e.param === 'title') ? 'invalid' : '' %>">
         </div>
         <div class="form-control">
-            <label for="imageUrl">Image URL</label>
-            <input type="text" name="imageUrl" id="imageUrl"
-                   value="<% if (editing || hasError) { %><%= product.imageUrl %><% } %>"
+            <label for="image">Image</label>
+            <input type="file" name="image" id="image"
                    class="<%= validationErrors.find(e => e.param === 'imageUrl') ? 'invalid' : '' %>">
         </div>
         <div class="form-control">
