--- a/views/admin/edit-product.ejs
+++ b/views/admin/edit-product.ejs
@@ -11,7 +11,7 @@
         <div class="user-message user-message--error"><%= errorMessage; %></div>
     <% } %>
     <form class="product-form"
-          action="/admin/<% if (editing || hasError) { %>edit-product<% } else { %>add-product<% } %>" method="POST"
+          action="/admin/<% if (editing) { %>edit-product<% } else { %>add-product<% } %>" method="POST"
           enctype="multipart/form-data">
         <div class="form-control">
             <label for="title">Title</label>
@@ -21,8 +21,7 @@
         </div>
         <div class="form-control">
             <label for="image">Image</label>
-            <input type="file" name="image" id="image"
-                   class="<%= validationErrors.find(e => e.param === 'imageUrl') ? 'invalid' : '' %>">
+            <input type="file" name="image" id="image">
         </div>
         <div class="form-control">
             <label for="price">Price</label>
