--- a/views/shop/checkout.ejs
+++ b/views/shop/checkout.ejs
@@ -8,15 +8,28 @@
     <ul class="cart__item-list">
         <% products.forEach(p => { %>
             <li class="cart__item">
-                <h1><%= p.productId.title %></h1>
-                <h2>Quantity: <%= p.quantity %></h2>
+                <h1><%= p.productId.title ;%></h1>
+                <h2>Quantity: <%= p.quantity ;%></h2>
             </li>
-        <% }) %>
+        <% }); %>
     </ul>
-    <div class="center">
+    <div class="centered">
         <h2>
-            Total: <%= totalSum %>
+            Total: <%= totalSum ;%>
         </h2>
+    </div>
+    <div class="centered">
+        <button id="order-btn" class="btn">Order</button>
+        <script src="https://js.stripe.com/v3/"></script>
+        <script>
+          const stripe = Stripe("pk_test_51I01DgHHUtl2ZUMf66YyrpjUnjbis2nbClYMZC3MEM6SQXV5sv81jUtBpePKsTlcE4K4PxGWBTbXBWIh0keJtVjb00UT6kzKzY");
+          const orderBtn = document.getElementById('order-btn')
+          orderBtn.addEventListener('click', () => {
+            stripe.redirectToCheckout({
+              sessionId: '<%= sessionId ;%>'
+            });
+          })
+        </script>
     </div>
 </main>
 <%- include('../includes/end.ejs') %>
